--- a/src/90-examples/offroadJS/main.css
+++ b/src/90-examples/offroadJS/main.css
@@ -45,7 +45,7 @@ canvas {
     margin-bottom: 2em;
 }
 
-#instructions-close-button {
+#close-button {
     position: absolute;
     top: 0;
     right: 0;
