--- a/examples/80-scenes/fps-savo/style.css
+++ b/examples/80-scenes/fps-savo/style.css
@@ -1,36 +1,14 @@
 #instructions {
-				width: 100%;
-				height: 100%;
-				
-				user-select: none;
-				text-shadow: 1px 1px 1px #9E9E9E;
-				
-				position: absolute;
-				width: 100%;
-				height: 100%;
-				background-color: rgba(0,0,0,0.5);
-
-				display: -webkit-box;
-				display: -moz-box;
-				display: box;
-
-				-webkit-box-orient: horizontal;
-				-moz-box-orient: horizontal;
-				box-orient: horizontal;
-
-				-webkit-box-pack: center;
-				-moz-box-pack: center;
-				box-pack: center;
-
-				-webkit-box-align: center;
-				-moz-box-align: center;
-				box-align: center;
-
-				color: #ffffff;
-				text-align: center;
-				font-family: Arial;
-				font-size: 14px;
-				line-height: 24px;
-
-				cursor: pointer;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #ffffff;
+  cursor: pointer;
+  display: block;
+  font-family: Arial;
+  font-size: 14px;
+  height: 100%;
+  line-height: 24px;
+  position: absolute;
+  text-align: center;
+  user-select: none;
+  width: 100%;
 }
